# CppSheets

./: .directory  .gitignore  CMakeLists.txt  COPYING  CppSheets.kdev4  README  README.md  deploy_linux.sh  deploy_windows.bat  file.xml  fix-wincrash.bat  license_header.txt  linux_deploy_readme  linux_install.sh  setup.iss  test.xml
.kdev4/: CppSheets.kdev4
examples/: grading.xml  graphing.xml  if_advanced.xml  power.xlsx  power.xml  text-color.xlsx
exp/: README
libgraph/: CMakeLists.txt  bargraph.cxx  bargraph.hh  main.cxx
libmath/: CMakeLists.txt  chain.cxx  column.cxx  math.hh
linux/: linux_install.sh  linux_uninstall.sh
math/: Cargo.toml
math/src/: lib.rs
share/: CppSheets.desktop
src/: CMakeLists.txt  actions.cxx  actions.hh  appicon.rc  cellbar.cxx  cellbar.hh  filemenu.cxx  graphwin.cxx  graphwin.hh  homebar.cxx  homebar.hh  icons.qrc  libmath.hh  main.cxx  maintoolbar.cxx  maintoolbar.hh  math.cxx  math.hh  parser.cxx  parser.hh  ribbon.cxx  ribbon.hh  rsc.qrc  sheetwidget.cxx  sheetwidget.hh  statusbar.cxx  statusbar.hh  style.css  tablewidget.cxx  tablewidget.hh  tablewidget_delegate.cxx  tablewidget_delegate.hh  tabwidget.cxx  tabwidget.hh  window.cxx  window.hh
src/actions/: data_actions.cxx  data_actions.hh  file_actions.cxx  file_actions.hh  format_actions.cxx  format_actions.hh
src/dialogs/: border_dialog.cxx  border_dialog.hh  graph_dialog.cxx  graph_dialog.hh  graph_list_dialog.cxx  graph_list_dialog.hh
src/formula/: formula_utils.cxx  formula_utils.hh  math.cxx  math.hh  math_funcs.cxx  math_funcs.hh  math_types.hh  str_funcs.cxx  str_funcs.hh
src/graph/: bar_graph_win.cxx  bar_graph_win.hh  barchart.cxx  barchart.hh  barchart.ui
src/menu/: page_menu.cxx  page_menu.hh
src/menubar/: cellmenu.cxx  cellmenu.hh  filemenu.cxx  filemenu.hh  format_menu.cxx  format_menu.hh  graph_menu.cxx  graph_menu.hh  helpmenu.cxx  helpmenu.hh
src/parser/: csv_parser.cxx  csv_parser.hh  parser.cxx  parser.hh  sheet_item.hh  xlsx_parser.cxx  xlsx_parser.hh  xml_parser.cxx  xml_parser.hh
templates/: license_header.txt
tests/: .~lock.workbook.xlsx#  CMakeLists.txt  test1.cxx  workbook.xlsx
xlnt/source/detail/serialization/: miniz.cpp
